base64 en/de coding from apache commons